public/sass/partials/_working_with_us.scss
.working_with_us {
  font-family: 'IBM Plex Sans', sans-serif;
  .top_section {
    height: 90vh;
    background: url('/images/photos/wrkng-with-us.jpg') center center;
    background-size: cover;
    .top_text {
      display: flex;
      justify-content: center;
      align-items: center;
      p {
        text-align: center;
        margin: 7em 0;
        width: 70%;
        color: #fff;
        font-size: 1.3em;
        line-height: 1.5;
        span {
          background: rgba(0,0,0,0.5);
        }
      }
    }
  }
  .form_section {
    display: flex;
    background-color: #DB6136;
    padding: 6em 8em;
    font-family: BebasNeue, Helvetica, Arial, sans-serif;
    .hero_text {
      border-right: 10px solid #fff;
      display: flex;
      flex-direction: column;
      align-items: flex-end;
      padding-right: 1em;
      &--line {
        display: flex;
        line-height: 0.8;
        .excited {
          font-size: 10em;
          font-weight: 700;
          color: #fff;
        }
        .part, .us {
          font-size: 12em;
          font-weight: 700;
          color: #fff;
        }
        .small {
          color: #3B3B3B;
          font-size: 2em;
          font-weight: 700;
          position: relative;
          top: 2px;
        }
      }
    }
    .form {
      display: flex;
      justify-content: center;
      align-items: center;
      flex-direction: column;
      padding: 1em;
      text-align: center;
      font-size: 1.4em;
      .main_section {
        color: #fff;
        input {
          font-family: BebasNeue, Helvetica, Arial, sans-serif;
          background: none;
          color: #3B3B3B;
          border: none;
          border-bottom: 2px solid #fff;
          padding: 0 5px;
          margin: 5px;
          text-align: center;
        }
        input[id='name'], input[id='email'] {
          width: 210px;
        }
        input[id='number'] {
          width: 100px;
        }
      }
      .resume_section {
        margin-top: 1.5em;
        color: #3B3B3B;
        font-weight: 700;
        input {
          display: none;
        }
        .fake_btn {
          margin-left: 0.3em;
          padding: 0.2em 1em;
          color: #fff;
          background: #3B3B3B;
          border: none;
          border-radius: 5px;
        }
      }
      .submit_section {
        font-family: BebasNeue, Helvetica, Arial, sans-serif;
        margin-top: 1.5em;
        padding: 0.3em 1.1em;
        color: #fff;
        font-weight: 700;
        font-size: 1.2em;
        background: #3B3B3B;
        border: none;
        border-radius: 5px;
      }
    }
  }
}

@media screen and (max-width: 1207px) {
  .working_with_us {
    .form_section {
      padding: 6em 4em;
      .hero_text {
        justify-content: center;
      }
    }
  }
}

@media screen and (max-width: 1079px) {
  .working_with_us {
    .form_section {
      padding: 6em 0.2em;
      .hero_text {
        justify-content: center;
      }
    }
  }
}

@media screen and (max-width: 957px) {
  .working_with_us {
    .top_section .top_text {
      height: auto;
      padding: 1em;
      p {
        width: auto;
        height: auto;
        margin: 7em 0;
      }
    }
    .form_section {
      flex-direction: column;
      .hero_text {
        border-right: none;
        border-bottom: 10px solid #fff;
      }
    }
  }
}

@media screen and (max-width: 514px) {
  .working_with_us {
    .form_section {
      .form {
        .resume_section {
          .fake_btn {
            margin-left: 0.3em;
          }
        }
      }
    }
  }
}

@media screen and (max-width: 500px) {
  .working_with_us {
    .top_text {
      p {
        font-size: 1em;
        margin: 2em 0;
      }
    }
    .form_section {
      .form {
        .resume_section label {
          margin-top: 0.3em;
        }
      }
    }
  }
}

